--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,17 +3,20 @@ layout: default
 ---
 <article itemscope itemtype="http://schema.org/BlogPosting">
 
-  <!-- <header class="post-header">
+  <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+    {% if page.author %}
+    <p class="post-meta">
+      by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
+    </p>
+    {% endif %}
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
+        ({{ page.date | date: date_format }})
       </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
-  </header> -->
+    </p>
+  </header>
 
   <div itemprop="articleBody">
     {{ content }}
