Fixed bug in default layout, renamed article on code and stories

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,10 +83,10 @@
                  {%- endif -%}
                  {% if page.banner-width -%}
                  width="{{ page.banner-width}}"
-                 {%- endif -%}}
+                 {%- endif -%}
                  {% if page.banner-height -%}
                  height="{{ page.banner-height}}"
-                 {%- endif -%}}
+                 {%- endif -%}
             />
             {%- endif -%}
             <!-- Post tagline -->
